--- a/SCSS/utilities/_media.scss
+++ b/SCSS/utilities/_media.scss
@@ -74,11 +74,42 @@ padding: 0px 15px 0px 15px;
   }
 }
 
+@media (min-width: 768px) and (max-width: 992px){
+.visible-it_two {
+  display: block;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1400px){
+ .visible-serv {
+  display: block;
+  }
+}
+
 @media (min-width: 1200px) and (max-width: 1400px){
 .visible-digi {
   display: block;
   }
 }
+
+@media (min-width: 576px) and (max-width: 1400px){
+.visible-sec {
+  display: block;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1259px){
+.visible-sec_two, .visible-des_two {
+  display: block;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1400px){
+.visible-des {
+  display: block;
+  }
+}
+
 // About
 
 @media (min-width: 1260px){
